<resources>
    <string name="app_name">Geolocation</string>
    <string name="lat_input">Latitude</string>
    <string name="lng_input">Longitude</string>
    <string name="reset">Reset</string>
    <string name="set">Set</string>
    <string name="track_text">Track your position</string>

    <string name="standard_enter_message">You have just entered the desired area.</string>
    <string name="foreground_service_message">You\'re in tracking mode right now.</string>
</resources>
